baumstamm-lib/src/tree/snapshots/baumstamm_lib__tree__graph__test__complete_tree_1-2.snap
---
source: baumstamm-lib/src/tree/graph.rs
expression: gens
---
[
    [
        0,
    ],
    [
        4,
    ],
    [
        5,
    ],
    [
        6,
        1,
    ],
    [
        7,
        2,
    ],
    [
        9,
        3,
    ],
    [
        10,
        8,
    ],
    [
        11,
    ],
]
