baumstamm-lib/src/tree/snapshots/baumstamm_lib__tree__graph__test__double_inheritance-2.snap
---
source: baumstamm-lib/src/tree/graph.rs
expression: layers
---
[
    [
        0,
        7,
        1,
    ],
    [
        2,
        4,
        5,
        6,
        3,
    ],
    [
        8,
    ],
]
