baumstamm-lib/src/tree/snapshots/baumstamm_lib__tree__graph__test__xs-2.snap
---
source: baumstamm-lib/src/tree/graph.rs
expression: layers
---
[
    [
        0,
        1,
    ],
    [
        3,
        2,
    ],
]
